--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,3 +7,42 @@
 @import "partials/forms";
 @import "partials/buttons";
 @import "partials/dialog";
+
+img {
+    max-width: 100%;
+}
+
+.register {
+    .banner {
+        &-content {
+            margin: 3rem;
+            max-width: 420px;
+            position: relative;
+            z-index: 1;
+
+            img {
+                margin-bottom: 24px;
+                max-height: 40px;
+            }
+        }
+
+        &-image {
+            inset: 0;
+        }
+    }
+
+    .form {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 1rem;
+        height: 100%;
+        width: 100%;
+
+        @media screen and (min-width: 450px) {
+            max-width: 430px;
+        }
+    }
+}
